tests/NormalTests/paczka1/fuzzy1/56794610.err
Error in line 6: wug9BhQ	b S994 11,1
Error in line 4: wug9BhQ0b S531 60,4
Error in line 7: wug9BhQ0b S994 4,9
Error in line 18: 72JfLvIMDxE S994 5,5
Error in line 32: S994 S127 0,0
Error in line 37: S994 S531 4,0
